# Sephirot

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  readme.md
docs/: agent-integration.md  medicalaos-executable-ontology.md  release.md  succession-agent.md  template-packs.md
examples/: revenue_leader.seed.json
integrations/vscode/: package.json
integrations/vscode/src/: extension.js
md/: 세피로트-클리포드.md
scripts/: install-agent-skill.sh
sephirot/: __init__.py  ambiguity.py  builder.py  canon.py  cli.py  doctor.py  graphml.py  interview.py  medicalaos.py  models.py  neo4j.py  planner.py  profile.py  rdf.py  templates.py  validation.py  visualization.py
skills/sephirot-tree-builder/: SKILL.md
skills/sephirot-tree-builder/agents/: openai.yaml
skills/sephirot-tree-builder/references/: cli.md
template-packs/: core.json  registry.json
tests/: test_ambiguity.py  test_builder.py  test_cli.py  test_graphml.py  test_medicalaos.py  test_neo4j.py  test_packaging.py  test_planner.py  test_profile.py  test_rdf.py  test_templates.py  test_validation.py  test_visualization.py
